--- a/sportsbook/build.gradle
+++ b/sportsbook/build.gradle
@@ -25,9 +25,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+
+	implementation "org.modelmapper:modelmapper:2.4.5"
+	runtimeOnly 'com.h2database:h2:2.1.210'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2:2.1.210'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:4.3.1'
