--- a/sportsbook/build.gradle
+++ b/sportsbook/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:4.3.1'
+	testImplementation 'com.google.code.gson:gson:2.9.0'
 }
 
 tasks.named('test') {
