--- a/sportsbook/src/main/resources/application.yaml
+++ b/sportsbook/src/main/resources/application.yaml
@@ -4,5 +4,10 @@ spring:
     url: jdbc:h2:mem:sportsbookdb
     driverClassName: org.h2.Driver
 
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
   jpa:
     defer-datasource-initialization: true
