--- a/scoreboard-ui/package.json
+++ b/scoreboard-ui/package.json
@@ -11,6 +11,8 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-stomp": "^5.1.0",
+    "sockjs": "^0.3.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
